@@ -59,3 +59,5 @@ SECRET_KEY = 'empty'
 MIDDLEWARE_CLASSES = ()
 
 CAPTCHA_FLITE_PATH = os.environ.get('CAPTCHA_FLITE_PATH', None)
+CAPTCHA_BACKGROUND_COLOR = 'transparent'
+# CAPTCHA_BACKGROUND_COLOR = '#ffffffff'
