@@ -1,3 +1,4 @@
+<body style="background-color: #aba">
 <form action="." method="post">
     {% csrf_token %}
 
@@ -8,3 +9,4 @@
         <input type="submit" value="Submit" />
     </div>
 </form>
+</body>
